tests/test_assets/semantic/invalid/expressions/shift_negative_count.expected
semantic error at line 6: shift count cannot be negative
semantic error at line 7: shift count cannot be negative
semantic error at line 8: shift count cannot be negative
semantic error at line 9: shift count cannot be negative
4 semantic errors generated.
